--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "steefaan/cakephp-bugsnag",
+    "name": "jeffersonsimaogoncalves/cakephp-bugsnag",
     "type": "cakephp-plugin",
     "description": "Bugsnag log engine for CakePHP.",
     "keywords": [
@@ -11,6 +11,10 @@
         {
             "name": "Stefan Dickmann",
             "role": "Author"
+        },
+        {
+            "name": "Jefferson Simão Gonçalves",
+            "homepage": "https://github.com/jeffersonsimaogoncalves"
         }
     ],
     "license": "MIT",
@@ -19,22 +23,13 @@
         "issues": "https://github.com/steefaan/cakephp-bugsnag/issues"
     },
     "require": {
-        "php": ">=5.4.0",
-        "cakephp/cakephp": "~3.0",
-        "bugsnag/bugsnag": "2.*"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "4.1.*",
-        "friendsofcake/cakephp-test-utilities": "dev-master"
+        "php": ">=7.0",
+        "cakephp/cakephp": "^3.6",
+        "bugsnag/bugsnag": "^3.0"
     },
     "autoload": {
         "psr-4": {
             "Bugsnag\\": "src"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Bugsnag\\Test\\": "tests"
         }
     }
 }
